# any2json-py

./: .env.example  .gitignore  README.md  config.yml  pyproject.toml
any2json_py/: __init__.py  cli.py  config.py  core.py  exceptions.py  schema.py
any2json_py/agents/: coordinator.py  worker.py
any2json_py/parsers/: ai_parsers.py  base.py  content.py  local_parsers.py
any2json_py/utils/: chunker.py  cost_tracker.py  file_helpers.py  logger.py
data/: image_schema.json
data/invoice/: invoice_schema.json
data/text/: job_posting.txt  schema.json
spec/: flow.md  index.md  lessons-learned.md
tests/: test_agents.py  test_cli.py  test_parsers.py
